[gd_scene load_steps=8 format=3 uid="uid://r3lmq4yt0woa"]

[ext_resource type="Script" uid="uid://bwcfax8cty11r" path="res://scene/menu/pause_menu.gd" id="1_bd44k"]
[ext_resource type="FontFile" uid="uid://cuq6cgihu0i06" path="res://assets/UI/fonts/editundo.ttf" id="1_f8nhd"]
[ext_resource type="Texture2D" uid="uid://ylmf3f531jhh" path="res://assets/UI/button/button_rectangle_depth_flat.png" id="2_bd44k"]
[ext_resource type="Texture2D" uid="uid://crpsobwbvnmo0" path="res://assets/UI/button/button_rectangle_depth_gradient.png" id="3_77uqw"]

[sub_resource type="Animation" id="Animation_77uqw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_bd44k"]
resource_name = "blur"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o12qf"]
_data = {
&"RESET": SubResource("Animation_77uqw"),
&"appear": SubResource("Animation_bd44k")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bd44k")

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -163.0
offset_right = 163.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30
alignment = 1

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_f8nhd")
theme_override_font_sizes/font_size = 100
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 75)
layout_mode = 2
texture_normal = ExtResource("2_bd44k")
texture_pressed = ExtResource("3_77uqw")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ResumeButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -37.5
offset_right = 90.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_f8nhd")
theme_override_font_sizes/font_size = 55
text = "RESUME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 75)
layout_mode = 2
texture_normal = ExtResource("2_bd44k")
texture_pressed = ExtResource("3_77uqw")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/RestartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -37.5
offset_right = 90.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_f8nhd")
theme_override_font_sizes/font_size = 55
text = "RESTART"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 75)
layout_mode = 2
texture_normal = ExtResource("2_bd44k")
texture_pressed = ExtResource("3_77uqw")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -37.5
offset_right = 90.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_f8nhd")
theme_override_font_sizes/font_size = 55
text = "EXIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_o12qf")
}

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
